Updated homepage content.

--- a/content/home.html
+++ b/content/home.html
@@ -1,4 +1,4 @@
-<p>I am self taught having started out with the C programming language about ten years ago. Since then I have developed skills for a wide range of technical expertise. These include becoming an adept programmer in languages such as C, C++, Java, Python, Haskell and web-based technologies including PHP and SQL (MySQL, PostgreSQL, SQL Server).</p>
+<p>I am self taught having started out with the C programming language nearly 15 years ago. Since then I have developed skills for a wide range of technical expertise. These include becoming an adept programmer in languages such as C, C++, Java, Python, Haskell and web-based technologies including PHP and SQL (MySQL, PostgreSQL, SQL Server).</p>
 <p>In 2009 I graduated from the <a href="http://www.shef.ac.uk/" target="new">University of Sheffield</a> where I studied for a BSc in <em>Computer Science &amp; Mathematics</em> and attained a 2.1 classification with honours. Here is a list of the topics which I took particular interest in:</p>
 
 <div id="topics" class="clear-fix">
