Updated home content link href attribute.

--- a/content/home.html
+++ b/content/home.html
@@ -6,7 +6,7 @@
     <li>
       Systems analysis &amp; design
       <ul>
-        <li><a href="http://www.dcs.shef.ac.uk/~ajhs/discovery/" target="_blank">The Discovery Method for OO</a></li>
+        <li><a href="http://staffwww.dcs.shef.ac.uk/people/A.Simons/discovery/" target="_blank">The Discovery Method for OO</a></li>
       </ul>
     </li>
     <li>
